# substack-handling-types-in-beam-dataframes

./: README.md  pyproject.toml  snippet_base.py  snippet_decimal_dtype.py  snippet_with_output_types.py
handling_types_in_beam_dataframes/pandas/extensions/: decimal.py
