[tool.poetry]
name = "handling_types_in_beam_dataframes"
version = "0.1.0"
description = ""
authors = ["Jeremie Bigras-Dunberry <bigjerbd@gmail.com>"]
readme = "README.md"
packages = [{include = "handling_types_in_beam_dataframes"}]

[tool.poetry.dependencies]
python = "^3.10"
apache-beam = {extras = ["dataframe"], version = "^2.43.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
